force-app/main/default/objects/Solution_Selling_Snapshot__c/fields/Account_CSM_Health_Change__c.field-meta.xml
<CustomField>
    <fullName>Account_CSM_Health_Change__c</fullName>
    <label>Account CSM Health Change</label>
    <length>255</length>
    <type>Text</type>
</CustomField>