force-app/main/default/objects/Solution_Selling_Snapshot__c/fields/First_Entered_Shopping_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Entered_Shopping_Date__c</fullName>
    <label>First Entered Shopping Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>