force-app/main/default/objects/Solution_Selling_Snapshot__c/fields/IMF_Upside__c.field-meta.xml
<CustomField>
    <fullName>IMF_Upside__c</fullName>
    <label>IMF/Upside</label>
    <length>255</length>
    <type>Text</type>
</CustomField>