force-app/main/default/objects/Solution_Selling_Snapshot__c/fields/MD_Eval_Pain__c.field-meta.xml
<CustomField>
    <fullName>MD_Eval_Pain__c</fullName>
    <label>MD Eval: Pain</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>