force-app/main/default/objects/Solution_Selling_Snapshot__c/fields/Regional_VP_Notes_Last_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Regional_VP_Notes_Last_Updated_By__c</fullName>
    <label>Regional VP Notes Updated By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>