force-app/main/default/objects/Solution_Selling_Snapshot__c/fields/Services_Hours_Total__c.field-meta.xml
<CustomField>
    <fullName>Services_Hours_Total__c</fullName>
    <label>Services Hours Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>