force-app/main/default/objects/Solution_Selling_Snapshot__c/fields/Services_Lead__c.field-meta.xml
<CustomField>
    <fullName>Services_Lead__c</fullName>
    <label>Services Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>