force-app/main/default/objects/Solution_Selling_Snapshot__c/fields/Solution_Selling_Stage__c.field-meta.xml
<CustomField>
    <fullName>Solution_Selling_Stage__c</fullName>
    <description>&quot;ISM Material&quot; is the new naming convention being used for &quot;Solution Selling&quot;</description>
    <label>ISM Material Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>