force-app/main/default/objects/Solution_Selling_Snapshot__c/fields/VP_Eval_Power__c.field-meta.xml
<CustomField>
    <fullName>VP_Eval_Power__c</fullName>
    <label>VP Eval: Power</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>