force-app/main/default/objects/Solution_Selling_Snapshot__c/fields/Won__c.field-meta.xml
<CustomField>
    <fullName>Won__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Won</label>
    <type>Checkbox</type>
</CustomField>