force-app/main/default/objects/Solution_Selling_Snapshot__c/fields/Won_against_Lost_to__c.field-meta.xml
<CustomField>
    <fullName>Won_against_Lost_to__c</fullName>
    <label>Won against / Lost to</label>
    <length>255</length>
    <type>Text</type>
</CustomField>